# compressor-task

./: .clang-format  .clang-tidy  CMakeLists.txt  build.sh  conanfile.txt
.github/workflows/: cmake-single-platform.yml
compressor/: CMakeLists.txt
compressor/src/: compressor.cpp
libcompressor/: CMakeLists.txt
libcompressor/include/libcompressor/: libcompressor.hpp
libcompressor/src/: libcompressor.cpp
libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
